# modelctl-mlflow

./: .gitignore  README.md  pyproject.toml
deploy/: .env.example  Dockerfile  docker-compose.yaml
deploy/auth/: basic_auth.ini
docs/: artifact_store_workflow.md
modelctl/: __init__.py  cli.py  core.py  tags.py
