[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modelctl-mlflow"
version = "1.1.2"
description = "Small MLflow Model Registry utility for versioning arbitrary model payloads."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE*"]
authors = [{ name = "rexologue" }]
keywords = ["cli", "utilities", "mlflow", "registry"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "mlflow>=2.9",
]

[project.scripts]
modelctl = "modelctl.cli:main"

[tool.setuptools.packages.find]
include = ["modelctl*"]
